# Environmental-monitoring-project

./: .gitignore  readme
code/application/: CMakeLists.txt  app  build.sh  env.cpp  main.cpp
code/application/doc/: application.txt
code/application/inc/: at24c08.h  bsp_mp157.h  common.h  ds18b20.h  lcd_fb.h  led.h  mqtt_client.h  png_mte.h  tcp_server.h  touch.h  uart_test.h  word.h
code/application/lib/mqttlib/lib/: libpaho-mqtt3a.so.1.3.8  libpaho-mqtt3as.so.1.3.8  libpaho-mqtt3c.so.1.3.8  libpaho-mqtt3cs.so.1.3.8
code/application/lib/pnglib/lib/: libpng16.la  libpng16.so.16.34.0
code/application/lib/pnglib/lib/pkgconfig/: libpng16.pc
code/application/lib/tslib/lib/: libts.la
code/application/lib/tslib/lib/ts/: dejitter.la  input.la  invert.la  touchkit.la
code/application/lib/zlib/lib/: libz.so.1.2 copy.10
code/application/src/: at24c08.cpp  common.cpp  ds18b20.cpp  lcd_fb.cpp  led.cpp  led_qt.cpp  mqtt_client.cpp  png.cpp  readTemp.cpp  tcp_server.cpp  tempTCPClient.cpp  tempTCPService.cpp  touch.cpp  uart_test.cpp  word.cpp
code/application/src/atk_mp157/: bsp_mp157.h  readTemp.cpp  tempTCPService.cpp
code/application/test/: get  give  hello  read  tcp_client  tcp_client.py  test.cpp  test.h
code/driver/at24c08/: Makefile  at24c08.c  build.sh
code/driver/ds18b20/: Makefile  build  ds18b20.c
code/driver/led/: Makefile  led.c
code/driver/rpmsg/: .rpmsg_client_sample.ko.cmd  .rpmsg_client_sample.mod.cmd  .rpmsg_client_sample.mod.o.cmd  .rpmsg_client_sample.o.cmd  Makefile  build.sh  modules.order  rpmsg_client_sample.ko  rpmsg_client_sample.mod  rpmsg_client_sample.mod.c
code/driver/w25q64/: Makefile  build.sh  interface.h  w25q64.c
code/scripts/: build_imx6ull_linux.sh  build_imx6ull_rootfs_busybox.sh  build_imx6ull_uboot.sh  build_mp157_linux.sh  build_mp157_rootfs_buildroot.sh  build_mp157_rootfs_busybox.sh  build_mp157_tfa.sh  build_mp157_uboot.sh
code/tools/jpeg-9b/: Makefile  cjpeg  config.status  djpeg  jpegtran  libjpeg.la  libtool  rdjpgcom
code/tools/libpng-1.6.34/: Makefile  config.status  libpng16-config  libpng16.la  libtool  pngcp  pngfix  pngimage  pnglibconf.out  pngstest  pngtest  pngunknown  pngvalid  timepng
code/tools/stm32wrapper4dbg-master/: stm32wrapper4dbg
code/tools/tslib-1.16/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool  tslib.pc
code/tools/zlib-1.2.10/: Makefile  adler32.lo  compress.lo  crc32.lo  deflate.lo  (+18 more)
(+232 files in other folders)
